--- a/config.json
+++ b/config.json
@@ -1,10 +1,9 @@
 {
-  "bioUrl": "https://raw.githubusercontent.com/m4tt72/m4tt72/master/README.md",
+  "bioUrl": "https://github.com/ggg6r34t/ggg6r34t/blob/main/README.md",
   "social": {
-    "instagram": "m4tt72",
-    "github": "m4tt72",
-    "linkedin": "yassinefathi"
+    "github": "ggg6r34t",
+    "linkedin": "ghyorkakpee"
   },
-  "theme": "gruvboxdark",
+  "theme": "darkpastel",
   "border": true
 }
